# plankton

./: .gitignore  .jscpd.json  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: subprocess-settings.json
.claude/hooks/: README.md  config.json  multi_linter.sh  protect_linter_configs.sh  stop_config_guardian.sh  test_hook.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: analyze.py  classeval_wrapper.py  prereqs.sh  prompt_template.txt
benchmark/archive/: classeval_prompt_template.txt  evalplus_wrapper.py  runner.py
benchmark/results/: metadata.json
docs/: FAQ.md  REFERENCE.md  SETUP.md  adr-typescript-hooks-expansion.md  stress-test-report.md
docs/adr-implementation-plans/: TypeScript Hooks Expansion - Implementation Plan.md  plan2.md  plan3.md  plan4.md
docs/psf/: 00-plankton-architecture-overview.md  01-testing-infrastructure.md
docs/specs/: adr-cli-tool-preference-warnings.md  adr-glm-benchmark-support.md  adr-hook-integration-testing.md  adr-hook-schema-convention.md  adr-package-manager-enforcement.md  adr-typescript-hooks-expansion.md  adr-versioning-cc-compatibility.md  investigate-biome-json.md  linear-issue-hook-messages.md  portable-hooks-template.md  snapshots.md  stress-test-report.md  subprocess-permission-gap.md
docs/tests/: README.md  test_reference_accuracy.sh
scripts/: init-typescript.sh  setup.py
src/: __init__.py
src/app/: __init__.py
tests/: __init__.py
tests/stress/: run_stress_tests.sh
tests/unit/: __init__.py  test_analyze.py  (+4 more)
(+89 files in other folders)
