[project]
name = "my-project"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  # Linting & formatting
  "ruff",
  "ty",
  "flake8",
  "flake8-pydantic",
  "flake8-async",
  "vulture",
  "bandit",
  # Testing
  "pytest",
  "pytest-xdist",
  # Pre-commit
  "pre-commit",
  # YAML linting
  "yamllint",
  # JSON schema validation
  "check-jsonschema",
  "evalplus>=0.3.1",
  "scipy>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "scripts"]
skips = []

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
